--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -58,6 +58,7 @@ transform: scale(1,1);
 grid-row:5/6;
 grid-column:2/3;
 background:var(--bg1);
+overflow-y: scroll;
 
 }
 .contain{
@@ -99,4 +100,8 @@ text-align:center ;
 .link-decor{
     background: rgba(146, 155, 68, 0.7);
     
+}
+.save-status{
+    opacity:0;
+    transition: opacity 1500ms ease-in-out;
 }
